tests/error/type_errors/not_not_bool.err
Guppy compilation failed. Error in file $FILE:12

10:    @guppy(module)
11:    def foo(x: NonBool) -> bool:
12:        return not x
                      ^
GuppyTypeError: Expression of type `NonBool` cannot be interpreted as a `bool`
